--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
   --social-icons--background-color: #2196f3;
   --social-mail-icons--normal-color: #757575;
   --label-color: #fff;
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -50,6 +51,7 @@ h6 {
 ul {
   list-style-type: none;
 }
+
 /* ALL SECTION CLASS */
 
 .section {
@@ -113,6 +115,8 @@ ul {
 .main-navigation a:focus {
   color: var(--link-active-color);
   outline: 0;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .nav-active-bar {
@@ -129,6 +133,8 @@ ul {
   top: 46px;
   left: 0;
   border-radius: 2px;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .super-nav-class {
@@ -160,6 +166,8 @@ ul {
 .global-header a.mail:focus {
   color: var(--link-active-color);
   outline: 0;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .global-header a.phone-number {
@@ -177,6 +185,8 @@ ul {
 .global-header a.phone-number:hover,
 .global-header a.phone-number:focus {
   color: var(--link-active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact .mail svg {
@@ -216,6 +226,8 @@ ul {
 .request-button:focus {
   background: #fff;
   color: #000000;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* SECOND SECTION */
@@ -337,6 +349,7 @@ ul li p {
   height: 44px;
   width: 44px;
   color: var(--social-icons--normal-color);
+  border-radius: 50%;
 }
 .icons-list .icons svg {
   width: 20px;
@@ -353,8 +366,9 @@ ul li p {
 .ourteam-list .icons-list .icons:focus {
   color: var(--social-icons--hover-color);
   background-color: var(--social-icons--background-color);
-  border-radius: 50%;
   outline: 0;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* FIFTH SECTION  */
@@ -384,6 +398,8 @@ ul li p {
   color: var(--social-icons--background-color);
   border: 1px solid var(--social-icons--background-color);
   cursor: pointer;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* GLOBAL FOOTER */
 
@@ -412,6 +428,8 @@ ul li p {
 address a:hover,
 address a:focus {
   color: #fff;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .global-footer .logo {
@@ -478,8 +496,9 @@ address a:focus {
 .global-footer .footer-icons-list .footer-icons:focus {
   color: var(--social-icons--hover-color);
   background-color: var(--social-icons--background-color);
-  border-radius: 50%;
   outline: 0;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* PORTFOLIO PAGE */
@@ -519,6 +538,8 @@ address a:focus {
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   color: #fff;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .category-flex {
@@ -550,7 +571,6 @@ address a:focus {
 }
 
 .category-flex li {
-  position: relative;
   border: 1px solid #eeeeee;
 }
 
@@ -560,26 +580,102 @@ address a:focus {
   cursor: pointer;
 }
 
-.category-flex .portfolio-label {
-  content: "";
-  display: none;
+.category-flex li:hover .portfolio-overlay {
+  top: 0;
 }
 
-.category-flex li:hover .portfolio-label {
-  display: block;
+.portfolio-thumb {
+  position: relative;
+  overflow: hidden;
+  padding: 0;
+}
+.portfolio-overlay {
+  padding: 0;
   position: absolute;
   top: 0;
+  right: 0;
+  bottom: 0;
   left: 0;
-  width: auto;
-  height: 294px;
-  text-align: center;
-  text-align: left;
-  padding: 63px 25px 91px;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  transition-property: top, right, buttom, left;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  top: 100%;
+
   background: rgba(33, 150, 243, 0.9);
+}
+
+.portfolio-thumb .text {
+  margin-top: 63px;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 91px;
+  text-align: left;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.03em;
   color: var(--label-color);
+}
+
+/* MODAL */
+
+.modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.2);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  transition: var(--transition);
+}
+
+.modal-content {
+  display: flex;
+  position: relative;
+  background: #fff;
+  height: 581px;
+  width: 528px;
+  margin: 0 auto;
+}
+.inside-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.close-btn {
+  font-size: 20px;
+  outline: none;
+  cursor: pointer;
+  color: #000;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
+.close-btn:hover,
+.close-btn:focus {
+  background: #000;
+  color: #fff;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
 }
